
    To do this need a mapping from physics index back to entity index.

    Added code to pass the entity index into the physics add cube.

    Seems that the render is not gamma correct? Linear? Why?

    Forgot to enable SRGB framebuffer.

    Increased max iterations to 64 because without that there is sliding and other bullshit.

    Will just have to deal with the additional CPU cost.


Sunday Evening, April 12th, 2015
--------------------------------

    Added authority int and authority time to entity manager. 

    Seems overkill to have a separate authority manager.

    Fixed up cube game code to modify these authority via get/set authority on entity manager.

    Added code to force player objects to be forced to have their own authority each update.

    Quickly hack up code that colors cubes according to authority, ignoring blending.

    Whenever authority is set to a non-zero value, clear the authority time to 0.

    Implement code to walk over all cubes, for cubes that are at rest but have non-zero
    authority, increment authority time by dt.

    Once authority time exceeds AuthorityThreshold return to 0 authority and clear
    authority time.

    Fixed a bug with at rest that was breaking this. Setting object state each frame
    was happening, and it was clearing at rest flag for everything. 

    This probably also explains perf problems.


Sunday Afternoon, April 12th, 2015
----------------------------------

    Bring back player cube linear bobbing. Retune it.

    Bring back player cube angular bobbing. Retune it.

    Bring back player cube rotation to face the current direction of movement (eg. anticipation/work)

    Bring back the player stay upright torque. Retune it.

    Basically everything is tuned now. Not 100% perfect but pretty close. 

    Even improved the velocity tilt while in push mode to look better.


Sunday Morning, April 12th, 2015
--------------------------------

    Big initial hitch when the game starts. 
